5 Validating No Config

--- a/src/main/resources/templates/respons.html
+++ b/src/main/resources/templates/respons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Headers</title>
+    <title th:text=>Headers</title>
 </head>
 <body>
 <h1>Request Headers</h1>
